# Pact

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  pyproject.toml
api/: __init__.py  main.py  requirements.txt
api/routes/: agent.py  contracts.py  mcp.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/about/: page.tsx
frontend/app/api/agent/: route.ts
frontend/app/chat/[id]/: actions.ts  page.tsx
frontend/app/components/: ContractPanel.tsx  CoverageChart.tsx  ResultBanner.tsx  ViolationAlert.tsx
frontend/app/dashboard/: page.tsx
frontend/app/login/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: Footer.tsx  Nav.tsx
frontend/components/chat/: ChatInput.tsx  ModelMessage.tsx
frontend/components/dashboard/: SettingField.tsx
frontend/db/: schema.ts
frontend/lib/config/: settings.ts
frontend/lib/supabase/: proxy.ts  server.ts
frontend/src/trigger/: agent.ts
opsguard/: __init__.py  agent.py  contract.py  scenarios.py  simulator.py  tools.py
pact/: __init__.py  commitment.py  contract.py  coverage.py  decorators.py  execution.py  types.py
pact/observers/: __init__.py  base.py  splunk_observer.py
pact/verifiers/: __init__.py  deterministic.py  nli.py  semantic.py
splunk/: __init__.py  dashboard.json  dashboard.xml  mcp_tools.py
